fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
   gap: 20px;
   align-items: center;
   height: 100%;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .controls-section {
